Grammars/Pml/Pml/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Pml/Par.y
-----------------------------------------------------------------------------

state 0 contains 1 shift/reduce conflicts.
state 8 contains 1 shift/reduce conflicts.
state 34 contains 2 shift/reduce conflicts.
state 36 contains 2 shift/reduce conflicts.
state 73 contains 1 reduce/reduce conflicts.
state 94 contains 1 shift/reduce conflicts.
state 127 contains 2 shift/reduce conflicts.
state 131 contains 1 shift/reduce conflicts.
state 137 contains 1 shift/reduce conflicts.
state 151 contains 2 shift/reduce conflicts.
state 169 contains 2 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 171 contains 1 shift/reduce conflicts.
state 173 contains 1 shift/reduce conflicts.
state 221 contains 2 shift/reduce conflicts.
state 233 contains 2 shift/reduce conflicts.
state 298 contains 1 shift/reduce conflicts.
state 303 contains 2 shift/reduce conflicts.
state 304 contains 2 shift/reduce conflicts.
state 313 contains 2 shift/reduce conflicts.
state 319 contains 1 shift/reduce conflicts.
state 323 contains 2 shift/reduce conflicts and 9 reduce/reduce conflicts.
state 352 contains 17 shift/reduce conflicts.
state 356 contains 17 shift/reduce conflicts.
state 368 contains 2 shift/reduce conflicts.
state 373 contains 2 shift/reduce conflicts.
state 374 contains 2 shift/reduce conflicts.
state 393 contains 1 shift/reduce conflicts.
state 405 contains 1 reduce/reduce conflicts.
state 436 contains 17 shift/reduce conflicts.
state 447 contains 1 shift/reduce conflicts.
state 448 contains 1 shift/reduce conflicts.
state 474 contains 2 shift/reduce conflicts.
state 519 contains 2 shift/reduce conflicts.
state 523 contains 1 shift/reduce conflicts.
state 530 contains 2 shift/reduce conflicts.
state 548 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pListModule -> ListModule                   (0)
	%start_pVisible -> Visible                         (1)
	%start_pChanPoll -> ChanPoll                       (2)
	%start_pSeparator -> Separator                     (3)
	%start_pTypename -> Typename                       (4)
	%start_pUnrOp -> UnrOp                             (5)
	%start_pConst -> Const                             (6)
	%start_pPrintType -> PrintType                     (7)
	%start_pModule -> Module                           (8)
	%start_pProctype -> Proctype                       (9)
	%start_pInline -> Inline                           (10)
	%start_pPactive -> Pactive                         (11)
	%start_pPdeclList -> PdeclList                     (12)
	%start_pPpriority -> Ppriority                     (13)
	%start_pPenabler -> Penabler                       (14)
	%start_pInit -> Init                               (15)
	%start_pIpriority -> Ipriority                     (16)
	%start_pNever -> Never                             (17)
	%start_pTrace -> Trace                             (18)
	%start_pUtype -> Utype                             (19)
	%start_pMtype -> Mtype                             (20)
	%start_pMsep -> Msep                               (21)
	%start_pMequals -> Mequals                         (22)
	%start_pMname -> Mname                             (23)
	%start_pDeclList -> DeclList                       (24)
	%start_pDecl -> Decl                               (25)
	%start_pDclIvar -> DclIvar                         (26)
	%start_pDeclVisible -> DeclVisible                 (27)
	%start_pUnsignedDecl -> UnsignedDecl               (28)
	%start_pUDclAssign -> UDclAssign                   (29)
	%start_pActive -> Active                           (30)
	%start_pAConst -> AConst                           (31)
	%start_pPriority -> Priority                       (32)
	%start_pEnabler -> Enabler                         (33)
	%start_pSequence -> Sequence                       (34)
	%start_pUStmt -> UStmt                             (35)
	%start_pStep -> Step                               (36)
	%start_pVarRefList -> VarRefList                   (37)
	%start_pAnyExpr -> AnyExpr                         (38)
	%start_pAnyExpr2 -> AnyExpr2                       (39)
	%start_pAnyExpr3 -> AnyExpr3                       (40)
	%start_pAnyExpr4 -> AnyExpr4                       (41)
	%start_pAnyExpr5 -> AnyExpr5                       (42)
	%start_pAnyExpr6 -> AnyExpr6                       (43)
	%start_pAnyExpr7 -> AnyExpr7                       (44)
	%start_pAnyExpr8 -> AnyExpr8                       (45)
	%start_pAnyExpr9 -> AnyExpr9                       (46)
	%start_pAnyExpr1 -> AnyExpr1                       (47)
	%start_pIvar -> Ivar                               (48)
	%start_pIvarConst -> IvarConst                     (49)
	%start_pIvarAssign -> IvarAssign                   (50)
	%start_pChInit -> ChInit                           (51)
	%start_pChType -> ChType                           (52)
	%start_pVarRef -> VarRef                           (53)
	%start_pVarRefAnyExpr -> VarRefAnyExpr             (54)
	%start_pVarRefTypedef -> VarRefTypedef             (55)
	%start_pSend -> Send                               (56)
	%start_pReceive -> Receive                         (57)
	%start_pPoll -> Poll                               (58)
	%start_pSendArgs -> SendArgs                       (59)
	%start_pArgList -> ArgList                         (60)
	%start_pRecvArgs -> RecvArgs                       (61)
	%start_pRecvArgList -> RecvArgList                 (62)
	%start_pUnaryMinus -> UnaryMinus                   (63)
	%start_pRecvArg -> RecvArg                         (64)
	%start_pAssign -> Assign                           (65)
	%start_pPargs -> Pargs                             (66)
	%start_pPArgList -> PArgList                       (67)
	%start_pPargList -> PargList                       (68)
	%start_pStmt -> Stmt                               (69)
	%start_pRange -> Range                             (70)
	%start_pOptions -> Options                         (71)
	%start_pRunPrio -> RunPrio                         (72)
	%start_pRunArgs -> RunArgs                         (73)
	%start_pExpr -> Expr                               (74)
	%start_pUname -> Uname                             (75)
	%start_pName -> Name                               (76)
	Integer -> L_integ                                 (77)
	String -> L_quoted                                 (78)
	PIdent -> L_PIdent                                 (79)
	ListModule -> Module                               (80)
	ListModule -> Module ListModule                    (81)
	Visible -> 'hidden'                                (82)
	Visible -> 'show'                                  (83)
	ChanPoll -> 'full'                                 (84)
	ChanPoll -> 'empty' 'nfull' 'nempty'               (85)
	Separator -> ';'                                   (86)
	Separator -> '->'                                  (87)
	Typename -> 'bit'                                  (88)
	Typename -> 'bool'                                 (89)
	Typename -> 'byte'                                 (90)
	Typename -> 'short'                                (91)
	Typename -> 'int'                                  (92)
	Typename -> 'mtype'                                (93)
	Typename -> 'chan'                                 (94)
	Typename -> Uname                                  (95)
	UnrOp -> '~'                                       (96)
	UnrOp -> '-'                                       (97)
	UnrOp -> '!'                                       (98)
	Const -> 'true'                                    (99)
	Const -> 'false'                                   (100)
	Const -> 'skip'                                    (101)
	Const -> Integer                                   (102)
	PrintType -> 'print'                               (103)
	PrintType -> 'printf'                              (104)
	PrintType -> 'printm'                              (105)
	Module -> Proctype                                 (106)
	Module -> Inline                                   (107)
	Module -> Init                                     (108)
	Module -> Never                                    (109)
	Module -> Trace                                    (110)
	Module -> Utype                                    (111)
	Module -> Mtype                                    (112)
	Module -> DeclList                                 (113)
	Proctype -> Pactive 'proctype' Name '(' PdeclList ')' Ppriority Penabler '{' Sequence '}'   (114)
	Inline -> 'inline' Name '(' ArgList ')' '{' Sequence '}'   (115)
	Pactive ->                                         (116)
	Pactive -> Active                                  (117)
	PdeclList ->                                       (118)
	PdeclList -> DeclList                              (119)
	Ppriority ->                                       (120)
	Ppriority -> Priority                              (121)
	Penabler ->                                        (122)
	Penabler -> Enabler                                (123)
	Init -> 'init' Ipriority '{' Sequence '}'          (124)
	Ipriority ->                                       (125)
	Ipriority -> Priority                              (126)
	Never -> 'never' '{' Sequence '}'                  (127)
	Trace -> 'trace' '{' Sequence '}'                  (128)
	Utype -> 'typedef' Name '{' DeclList '}' ';'       (129)
	Mtype -> 'mtype' Mequals '{' Mname '}' Msep        (130)
	Mtype -> 'mtype' Mname Msep                        (131)
	Msep ->                                            (132)
	Msep -> ';'                                        (133)
	Mequals ->                                         (134)
	Mequals -> '='                                     (135)
	Mname -> Name                                      (136)
	Mname -> Name ',' Mname                            (137)
	DeclList -> Decl Separator                         (138)
	DeclList -> Decl                                   (139)
	DeclList -> Decl Separator DeclList                (140)
	Decl -> DeclVisible Typename DclIvar               (141)
	Decl -> DeclVisible UnsignedDecl                   (142)
	DclIvar -> Ivar ',' DclIvar                        (143)
	DclIvar -> Ivar                                    (144)
	DeclVisible ->                                     (145)
	DeclVisible -> Visible                             (146)
	UnsignedDecl -> 'unsigned' Name ':' Const UDclAssign   (147)
	UDclAssign ->                                      (148)
	UDclAssign -> '=' AnyExpr                          (149)
	Active -> 'active' AConst                          (150)
	AConst ->                                          (151)
	AConst -> '[' Const ']'                            (152)
	Priority -> 'priority' Const                       (153)
	Enabler -> 'provided' '(' Expr ')'                 (154)
	Sequence -> Step                                   (155)
	Sequence -> Step Separator                         (156)
	Sequence -> Step Sequence                          (157)
	Sequence -> Step Separator Sequence                (158)
	UStmt ->                                           (159)
	UStmt -> 'unless' Stmt                             (160)
	Step -> Mtype                                      (161)
	Step -> Stmt UStmt                                 (162)
	Step -> DeclList                                   (163)
	Step -> 'xr' VarRefList                            (164)
	Step -> 'xs' VarRefList                            (165)
	VarRefList -> VarRef                               (166)
	VarRefList -> VarRef ',' VarRefList                (167)
	AnyExpr -> '(' AnyExpr2 '->' AnyExpr2 ':' AnyExpr2 ')'   (168)
	AnyExpr -> AnyExpr1                                (169)
	AnyExpr2 -> AnyExpr2 '||' AnyExpr3                 (170)
	AnyExpr2 -> AnyExpr2 '&&' AnyExpr3                 (171)
	AnyExpr2 -> AnyExpr3                               (172)
	AnyExpr3 -> AnyExpr3 '|' AnyExpr4                  (173)
	AnyExpr3 -> AnyExpr3 '^' AnyExpr4                  (174)
	AnyExpr3 -> AnyExpr3 '&' AnyExpr4                  (175)
	AnyExpr3 -> AnyExpr4                               (176)
	AnyExpr4 -> AnyExpr4 '==' AnyExpr5                 (177)
	AnyExpr4 -> AnyExpr4 '!=' AnyExpr5                 (178)
	AnyExpr4 -> AnyExpr5                               (179)
	AnyExpr5 -> AnyExpr5 '<' AnyExpr6                  (180)
	AnyExpr5 -> AnyExpr5 '>' AnyExpr6                  (181)
	AnyExpr5 -> AnyExpr5 '<=' AnyExpr6                 (182)
	AnyExpr5 -> AnyExpr5 '>=' AnyExpr6                 (183)
	AnyExpr5 -> AnyExpr6                               (184)
	AnyExpr6 -> AnyExpr6 '<<' AnyExpr7                 (185)
	AnyExpr6 -> AnyExpr6 '>>' AnyExpr7                 (186)
	AnyExpr6 -> AnyExpr7                               (187)
	AnyExpr7 -> AnyExpr7 '+' AnyExpr8                  (188)
	AnyExpr7 -> AnyExpr7 '-' AnyExpr8                  (189)
	AnyExpr7 -> AnyExpr8                               (190)
	AnyExpr8 -> AnyExpr8 '*' AnyExpr9                  (191)
	AnyExpr8 -> AnyExpr8 '/' AnyExpr9                  (192)
	AnyExpr8 -> AnyExpr8 '%' AnyExpr9                  (193)
	AnyExpr8 -> UnrOp AnyExpr9                         (194)
	AnyExpr8 -> AnyExpr9                               (195)
	AnyExpr9 -> 'len' '(' VarRef ')'                   (196)
	AnyExpr9 -> Poll                                   (197)
	AnyExpr9 -> VarRef                                 (198)
	AnyExpr9 -> Const                                  (199)
	AnyExpr9 -> 'timeout'                              (200)
	AnyExpr9 -> 'np_'                                  (201)
	AnyExpr9 -> 'enabled' '(' AnyExpr ')'              (202)
	AnyExpr9 -> 'pc_value' '(' AnyExpr ')'             (203)
	AnyExpr9 -> Name '[' AnyExpr ']' '@' Name          (204)
	AnyExpr9 -> 'run' Name '(' RunArgs ')' RunPrio     (205)
	AnyExpr9 -> 'get_priority' '(' Expr ')'            (206)
	AnyExpr9 -> 'set_priority' '(' Expr ',' Expr ')'   (207)
	AnyExpr9 -> '(' AnyExpr ')'                        (208)
	AnyExpr1 -> AnyExpr2                               (209)
	Ivar -> Name IvarConst IvarAssign                  (210)
	IvarConst ->                                       (211)
	IvarConst -> '[' Const ']'                         (212)
	IvarAssign ->                                      (213)
	IvarAssign -> '=' AnyExpr                          (214)
	IvarAssign -> '=' ChInit                           (215)
	ChInit -> '[' Const ']' 'of' '{' ChType '}'        (216)
	ChType -> Typename                                 (217)
	ChType -> Typename ',' ChType                      (218)
	VarRef -> Name VarRefAnyExpr VarRefTypedef         (219)
	VarRefAnyExpr ->                                   (220)
	VarRefAnyExpr -> '[' AnyExpr ']'                   (221)
	VarRefTypedef ->                                   (222)
	VarRefTypedef -> '.' VarRef                        (223)
	Send -> VarRef '!' SendArgs                        (224)
	Send -> VarRef '!' '!' SendArgs                    (225)
	Receive -> VarRef '?' RecvArgs                     (226)
	Receive -> VarRef '?' '?' RecvArgs                 (227)
	Receive -> VarRef '?' '<' RecvArgs '>'             (228)
	Receive -> VarRef '?' '?' '<' RecvArgs '>'         (229)
	Poll -> VarRef '?' '[' RecvArgs ']'                (230)
	Poll -> VarRef '?' '?' '[' RecvArgs ']'            (231)
	SendArgs -> ArgList                                (232)
	SendArgs -> AnyExpr '(' ArgList ')'                (233)
	ArgList -> AnyExpr ',' ArgList                     (234)
	ArgList -> AnyExpr                                 (235)
	ArgList ->                                         (236)
	RecvArgs -> RecvArgList                            (237)
	RecvArgs -> RecvArgList '(' RecvArgs ')'           (238)
	RecvArgList -> RecvArg                             (239)
	RecvArgList -> RecvArg RecvArgList                 (240)
	UnaryMinus ->                                      (241)
	UnaryMinus -> '-'                                  (242)
	RecvArg -> VarRef                                  (243)
	RecvArg -> 'eval' '(' VarRef ')'                   (244)
	RecvArg -> UnaryMinus Const                        (245)
	Assign -> VarRef '=' AnyExpr                       (246)
	Assign -> VarRef '++'                              (247)
	Assign -> VarRef '--'                              (248)
	Pargs -> String                                    (249)
	Pargs -> ArgList                                   (250)
	Pargs -> String ',' ArgList                        (251)
	PArgList ->                                        (252)
	PargList -> ',' ArgList                            (253)
	Stmt -> 'if' Options 'fi'                          (254)
	Stmt -> 'do' Options 'od'                          (255)
	Stmt -> 'for' '(' Range ')' '{' Sequence '}'       (256)
	Stmt -> 'atomic' '{' Sequence '}'                  (257)
	Stmt -> 'd_step' '{' Sequence '}'                  (258)
	Stmt -> 'select' '(' Sequence ')'                  (259)
	Stmt -> '{' Sequence '}'                           (260)
	Stmt -> Send                                       (261)
	Stmt -> Receive                                    (262)
	Stmt -> Assign                                     (263)
	Stmt -> 'else'                                     (264)
	Stmt -> 'break'                                    (265)
	Stmt -> 'goto' Name                                (266)
	Stmt -> Name ':' Stmt                              (267)
	Stmt -> PrintType '(' Pargs ')'                    (268)
	Stmt -> 'assert' Expr                              (269)
	Stmt -> Name '(' ArgList ')'                       (270)
	Stmt -> Expr                                       (271)
	Range -> Name 'in' Name                            (272)
	Range -> Name ':' AnyExpr '..' AnyExpr             (273)
	Options -> '::' Sequence                           (274)
	Options -> '::' Sequence Options                   (275)
	RunPrio ->                                         (276)
	RunPrio -> Priority                                (277)
	RunArgs ->                                         (278)
	RunArgs -> ArgList                                 (279)
	Expr -> AnyExpr                                    (280)
	Expr -> '(' Expr ')'                               (281)
	Expr -> ChanPoll '(' VarRef ')'                    (282)
	Uname -> Name                                      (283)
	Name -> PIdent                                     (284)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'->'           { PT _ (TS _ 14) }
	'.'            { PT _ (TS _ 15) }
	'..'           { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<<'           { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'>>'           { PT _ (TS _ 28) }
	'?'            { PT _ (TS _ 29) }
	'@'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'^'            { PT _ (TS _ 33) }
	'active'       { PT _ (TS _ 34) }
	'assert'       { PT _ (TS _ 35) }
	'atomic'       { PT _ (TS _ 36) }
	'bit'          { PT _ (TS _ 37) }
	'bool'         { PT _ (TS _ 38) }
	'break'        { PT _ (TS _ 39) }
	'byte'         { PT _ (TS _ 40) }
	'chan'         { PT _ (TS _ 41) }
	'd_step'       { PT _ (TS _ 42) }
	'do'           { PT _ (TS _ 43) }
	'else'         { PT _ (TS _ 44) }
	'empty'        { PT _ (TS _ 45) }
	'enabled'      { PT _ (TS _ 46) }
	'eval'         { PT _ (TS _ 47) }
	'false'        { PT _ (TS _ 48) }
	'fi'           { PT _ (TS _ 49) }
	'for'          { PT _ (TS _ 50) }
	'full'         { PT _ (TS _ 51) }
	'get_priority' { PT _ (TS _ 52) }
	'goto'         { PT _ (TS _ 53) }
	'hidden'       { PT _ (TS _ 54) }
	'if'           { PT _ (TS _ 55) }
	'in'           { PT _ (TS _ 56) }
	'init'         { PT _ (TS _ 57) }
	'inline'       { PT _ (TS _ 58) }
	'int'          { PT _ (TS _ 59) }
	'len'          { PT _ (TS _ 60) }
	'mtype'        { PT _ (TS _ 61) }
	'nempty'       { PT _ (TS _ 62) }
	'never'        { PT _ (TS _ 63) }
	'nfull'        { PT _ (TS _ 64) }
	'np_'          { PT _ (TS _ 65) }
	'od'           { PT _ (TS _ 66) }
	'of'           { PT _ (TS _ 67) }
	'pc_value'     { PT _ (TS _ 68) }
	'print'        { PT _ (TS _ 69) }
	'printf'       { PT _ (TS _ 70) }
	'printm'       { PT _ (TS _ 71) }
	'priority'     { PT _ (TS _ 72) }
	'proctype'     { PT _ (TS _ 73) }
	'provided'     { PT _ (TS _ 74) }
	'run'          { PT _ (TS _ 75) }
	'select'       { PT _ (TS _ 76) }
	'set_priority' { PT _ (TS _ 77) }
	'short'        { PT _ (TS _ 78) }
	'show'         { PT _ (TS _ 79) }
	'skip'         { PT _ (TS _ 80) }
	'timeout'      { PT _ (TS _ 81) }
	'trace'        { PT _ (TS _ 82) }
	'true'         { PT _ (TS _ 83) }
	'typedef'      { PT _ (TS _ 84) }
	'unless'       { PT _ (TS _ 85) }
	'unsigned'     { PT _ (TS _ 86) }
	'xr'           { PT _ (TS _ 87) }
	'xs'           { PT _ (TS _ 88) }
	'{'            { PT _ (TS _ 89) }
	'|'            { PT _ (TS _ 90) }
	'||'           { PT _ (TS _ 91) }
	'}'            { PT _ (TS _ 92) }
	'~'            { PT _ (TS _ 93) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_PIdent       { PT _ (T_PIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pListModule rule  0
	%start_pVisible rule  1
	%start_pChanPoll rule  2
	%start_pSeparator rule  3
	%start_pTypename rule  4
	%start_pUnrOp   rule  5
	%start_pConst   rule  6
	%start_pPrintType rule  7
	%start_pModule  rule  8
	%start_pProctype rule  9
	%start_pInline  rule  10
	%start_pPactive rule  11
	%start_pPdeclList rule  12
	%start_pPpriority rule  13
	%start_pPenabler rule  14
	%start_pInit    rule  15
	%start_pIpriority rule  16
	%start_pNever   rule  17
	%start_pTrace   rule  18
	%start_pUtype   rule  19
	%start_pMtype   rule  20
	%start_pMsep    rule  21
	%start_pMequals rule  22
	%start_pMname   rule  23
	%start_pDeclList rule  24
	%start_pDecl    rule  25
	%start_pDclIvar rule  26
	%start_pDeclVisible rule  27
	%start_pUnsignedDecl rule  28
	%start_pUDclAssign rule  29
	%start_pActive  rule  30
	%start_pAConst  rule  31
	%start_pPriority rule  32
	%start_pEnabler rule  33
	%start_pSequence rule  34
	%start_pUStmt   rule  35
	%start_pStep    rule  36
	%start_pVarRefList rule  37
	%start_pAnyExpr rule  38
	%start_pAnyExpr2 rule  39
	%start_pAnyExpr3 rule  40
	%start_pAnyExpr4 rule  41
	%start_pAnyExpr5 rule  42
	%start_pAnyExpr6 rule  43
	%start_pAnyExpr7 rule  44
	%start_pAnyExpr8 rule  45
	%start_pAnyExpr9 rule  46
	%start_pAnyExpr1 rule  47
	%start_pIvar    rule  48
	%start_pIvarConst rule  49
	%start_pIvarAssign rule  50
	%start_pChInit  rule  51
	%start_pChType  rule  52
	%start_pVarRef  rule  53
	%start_pVarRefAnyExpr rule  54
	%start_pVarRefTypedef rule  55
	%start_pSend    rule  56
	%start_pReceive rule  57
	%start_pPoll    rule  58
	%start_pSendArgs rule  59
	%start_pArgList rule  60
	%start_pRecvArgs rule  61
	%start_pRecvArgList rule  62
	%start_pUnaryMinus rule  63
	%start_pRecvArg rule  64
	%start_pAssign  rule  65
	%start_pPargs   rule  66
	%start_pPArgList rule  67
	%start_pPargList rule  68
	%start_pStmt    rule  69
	%start_pRange   rule  70
	%start_pOptions rule  71
	%start_pRunPrio rule  72
	%start_pRunArgs rule  73
	%start_pExpr    rule  74
	%start_pUname   rule  75
	%start_pName    rule  76
	Integer         rule  77
	String          rule  78
	PIdent          rule  79
	ListModule      rules 80, 81
	Visible         rules 82, 83
	ChanPoll        rules 84, 85
	Separator       rules 86, 87
	Typename        rules 88, 89, 90, 91, 92, 93, 94, 95
	UnrOp           rules 96, 97, 98
	Const           rules 99, 100, 101, 102
	PrintType       rules 103, 104, 105
	Module          rules 106, 107, 108, 109, 110, 111, 112, 113
	Proctype        rule  114
	Inline          rule  115
	Pactive         rules 116, 117
	PdeclList       rules 118, 119
	Ppriority       rules 120, 121
	Penabler        rules 122, 123
	Init            rule  124
	Ipriority       rules 125, 126
	Never           rule  127
	Trace           rule  128
	Utype           rule  129
	Mtype           rules 130, 131
	Msep            rules 132, 133
	Mequals         rules 134, 135
	Mname           rules 136, 137
	DeclList        rules 138, 139, 140
	Decl            rules 141, 142
	DclIvar         rules 143, 144
	DeclVisible     rules 145, 146
	UnsignedDecl    rule  147
	UDclAssign      rules 148, 149
	Active          rule  150
	AConst          rules 151, 152
	Priority        rule  153
	Enabler         rule  154
	Sequence        rules 155, 156, 157, 158
	UStmt           rules 159, 160
	Step            rules 161, 162, 163, 164, 165
	VarRefList      rules 166, 167
	AnyExpr         rules 168, 169
	AnyExpr2        rules 170, 171, 172
	AnyExpr3        rules 173, 174, 175, 176
	AnyExpr4        rules 177, 178, 179
	AnyExpr5        rules 180, 181, 182, 183, 184
	AnyExpr6        rules 185, 186, 187
	AnyExpr7        rules 188, 189, 190
	AnyExpr8        rules 191, 192, 193, 194, 195
	AnyExpr9        rules 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208
	AnyExpr1        rule  209
	Ivar            rule  210
	IvarConst       rules 211, 212
	IvarAssign      rules 213, 214, 215
	ChInit          rule  216
	ChType          rules 217, 218
	VarRef          rule  219
	VarRefAnyExpr   rules 220, 221
	VarRefTypedef   rules 222, 223
	Send            rules 224, 225
	Receive         rules 226, 227, 228, 229
	Poll            rules 230, 231
	SendArgs        rules 232, 233
	ArgList         rules 234, 235, 236
	RecvArgs        rules 237, 238
	RecvArgList     rules 239, 240
	UnaryMinus      rules 241, 242
	RecvArg         rules 243, 244, 245
	Assign          rules 246, 247, 248
	Pargs           rules 249, 250, 251
	PArgList        rule  252
	PargList        rule  253
	Stmt            rules 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271
	Range           rules 272, 273
	Options         rules 274, 275
	RunPrio         rules 276, 277
	RunArgs         rules 278, 279
	Expr            rules 280, 281, 282
	Uname           rule  283
	Name            rule  284

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pListModule -> . ListModule                  (rule 0)

	'active'       shift, and enter state 240
	'bit'          reduce using rule 145
	'bool'         reduce using rule 145
	'byte'         reduce using rule 145
	'chan'         reduce using rule 145
	'hidden'       shift, and enter state 225
	'init'         shift, and enter state 266
	'inline'       shift, and enter state 276
	'int'          reduce using rule 145
	'mtype'        shift, and enter state 226
			(reduce using rule 145)

	'never'        shift, and enter state 262
	'proctype'     reduce using rule 116
	'short'        reduce using rule 145
	'show'         shift, and enter state 227
	'trace'        shift, and enter state 260
	'typedef'      shift, and enter state 258
	'unsigned'     reduce using rule 145
	L_PIdent       reduce using rule 145

	ListModule     goto state 297
	Visible        goto state 218
	Module         goto state 298
	Proctype       goto state 280
	Inline         goto state 281
	Pactive        goto state 278
	Init           goto state 282
	Never          goto state 283
	Trace          goto state 284
	Utype          goto state 285
	Mtype          goto state 286
	DeclList       goto state 287
	Decl           goto state 221
	DeclVisible    goto state 222
	Active         goto state 274

State 1

	%start_pVisible -> . Visible                        (rule 1)

	'hidden'       shift, and enter state 225
	'show'         shift, and enter state 227

	Visible        goto state 296

State 2

	%start_pChanPoll -> . ChanPoll                      (rule 2)

	'empty'        shift, and enter state 105
	'full'         shift, and enter state 108

	ChanPoll       goto state 295

State 3

	%start_pSeparator -> . Separator                    (rule 3)

	'->'           shift, and enter state 293
	';'            shift, and enter state 294

	Separator      goto state 292

State 4

	%start_pTypename -> . Typename                      (rule 4)

	'bit'          shift, and enter state 190
	'bool'         shift, and enter state 191
	'byte'         shift, and enter state 192
	'chan'         shift, and enter state 193
	'int'          shift, and enter state 194
	'mtype'        shift, and enter state 195
	'short'        shift, and enter state 196
	L_PIdent       shift, and enter state 81

	PIdent         goto state 79
	Typename       goto state 291
	Uname          goto state 189
	Name           goto state 83

State 5

	%start_pUnrOp -> . UnrOp                            (rule 5)

	'!'            shift, and enter state 102
	'-'            shift, and enter state 104
	'~'            shift, and enter state 118

	UnrOp          goto state 290

State 6

	%start_pConst -> . Const                            (rule 6)

	'false'        shift, and enter state 107
	'skip'         shift, and enter state 115
	'true'         shift, and enter state 117
	L_integ        shift, and enter state 78

	Integer        goto state 84
	Const          goto state 289

State 7

	%start_pPrintType -> . PrintType                    (rule 7)

	'print'        shift, and enter state 147
	'printf'       shift, and enter state 148
	'printm'       shift, and enter state 149

	PrintType      goto state 288

State 8

	%start_pModule -> . Module                          (rule 8)

	'active'       shift, and enter state 240
	'bit'          reduce using rule 145
	'bool'         reduce using rule 145
	'byte'         reduce using rule 145
	'chan'         reduce using rule 145
	'hidden'       shift, and enter state 225
	'init'         shift, and enter state 266
	'inline'       shift, and enter state 276
	'int'          reduce using rule 145
	'mtype'        shift, and enter state 226
			(reduce using rule 145)

	'never'        shift, and enter state 262
	'proctype'     reduce using rule 116
	'short'        reduce using rule 145
	'show'         shift, and enter state 227
	'trace'        shift, and enter state 260
	'typedef'      shift, and enter state 258
	'unsigned'     reduce using rule 145
	L_PIdent       reduce using rule 145

	Visible        goto state 218
	Module         goto state 279
	Proctype       goto state 280
	Inline         goto state 281
	Pactive        goto state 278
	Init           goto state 282
	Never          goto state 283
	Trace          goto state 284
	Utype          goto state 285
	Mtype          goto state 286
	DeclList       goto state 287
	Decl           goto state 221
	DeclVisible    goto state 222
	Active         goto state 274

State 9

	%start_pProctype -> . Proctype                      (rule 9)

	'active'       shift, and enter state 240
	'proctype'     reduce using rule 116

	Proctype       goto state 277
	Pactive        goto state 278
	Active         goto state 274

State 10

	%start_pInline -> . Inline                          (rule 10)

	'inline'       shift, and enter state 276

	Inline         goto state 275

State 11

	%start_pPactive -> . Pactive                        (rule 11)

	'active'       shift, and enter state 240
	%eof           reduce using rule 116

	Pactive        goto state 273
	Active         goto state 274

State 12

	%start_pPdeclList -> . PdeclList                    (rule 12)

	'bit'          reduce using rule 145
	'bool'         reduce using rule 145
	'byte'         reduce using rule 145
	'chan'         reduce using rule 145
	'hidden'       shift, and enter state 225
	'int'          reduce using rule 145
	'mtype'        reduce using rule 145
	'short'        reduce using rule 145
	'show'         shift, and enter state 227
	'unsigned'     reduce using rule 145
	L_PIdent       reduce using rule 145
	%eof           reduce using rule 118

	Visible        goto state 218
	PdeclList      goto state 271
	DeclList       goto state 272
	Decl           goto state 221
	DeclVisible    goto state 222

State 13

	%start_pPpriority -> . Ppriority                    (rule 13)

	'priority'     shift, and enter state 125
	%eof           reduce using rule 120

	Ppriority      goto state 269
	Priority       goto state 270

State 14

	%start_pPenabler -> . Penabler                      (rule 14)

	'provided'     shift, and enter state 235
	%eof           reduce using rule 122

	Penabler       goto state 267
	Enabler        goto state 268

State 15

	%start_pInit -> . Init                              (rule 15)

	'init'         shift, and enter state 266

	Init           goto state 265

State 16

	%start_pIpriority -> . Ipriority                    (rule 16)

	'priority'     shift, and enter state 125
	%eof           reduce using rule 125

	Ipriority      goto state 263
	Priority       goto state 264

State 17

	%start_pNever -> . Never                            (rule 17)

	'never'        shift, and enter state 262

	Never          goto state 261

State 18

	%start_pTrace -> . Trace                            (rule 18)

	'trace'        shift, and enter state 260

	Trace          goto state 259

State 19

	%start_pUtype -> . Utype                            (rule 19)

	'typedef'      shift, and enter state 258

	Utype          goto state 257

State 20

	%start_pMtype -> . Mtype                            (rule 20)

	'mtype'        shift, and enter state 226

	Mtype          goto state 256

State 21

	%start_pMsep -> . Msep                              (rule 21)

	';'            shift, and enter state 255
	%eof           reduce using rule 132

	Msep           goto state 254

State 22

	%start_pMequals -> . Mequals                        (rule 22)

	'='            shift, and enter state 253
	%eof           reduce using rule 134

	Mequals        goto state 252

State 23

	%start_pMname -> . Mname                            (rule 23)

	L_PIdent       shift, and enter state 81

	PIdent         goto state 79
	Mname          goto state 250
	Name           goto state 251

State 24

	%start_pDeclList -> . DeclList                      (rule 24)

	'bit'          reduce using rule 145
	'bool'         reduce using rule 145
	'byte'         reduce using rule 145
	'chan'         reduce using rule 145
	'hidden'       shift, and enter state 225
	'int'          reduce using rule 145
	'mtype'        reduce using rule 145
	'short'        reduce using rule 145
	'show'         shift, and enter state 227
	'unsigned'     reduce using rule 145
	L_PIdent       reduce using rule 145

	Visible        goto state 218
	DeclList       goto state 249
	Decl           goto state 221
	DeclVisible    goto state 222

State 25
